<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bydesign.ems1.TestingHistoryWithListView"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devicename"

                android:layout_marginTop="2dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorPrimary"
                android:gravity="left"
                android:textStyle="bold"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/spinner"
                android:gravity="right"

                android:theme="@style/MyButton"

                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="5dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectDate"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:layout_marginTop="3dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="none"
                android:layout_weight="1"
                android:layout_marginLeft="50dp"
                android:hint="@string/fromDate"
                android:textSize="12dp">

            </EditText>
            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/editText1"
                android:contentDescription="From Date"
                android:cropToPadding="true"
                android:background="@drawable/calender48"
                android:layout_weight=".2"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        card_view:cardCornerRadius="4dp"
        android:layout_gravity="center_horizontal"
        card_view:cardBackgroundColor="@android:color/transparent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/savePdf"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left|center"
            android:elevation="8dp"
            app:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_get_app_black_24dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/show"
            android:layout_gravity="center_horizontal"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:theme="@style/MyButton"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/share"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right|center"
            android:elevation="6dp"
            app:backgroundTint="@color/colorPrimary"
            android:src="@drawable/share"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="5dp">

    <ListView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>
</android.support.v7.widget.CardView>
</LinearLayout>
